tests/paczka2/big_fuzzy/89283622.err
Error in line 1: S616 S616 50,8
Error in line 4: A9DZ61 S616 82,1
Error in line 9: A9DZ61 S329 68,8
Error in line 15: A9DZ61 A390 31,3
Error in line 17: ymgfgOCEW A390 93,77
Error in line 13: EO0IW1jVAt A390 92,1
Error in line 21: ymgfgOCEW A390 19,9
Error in line 32: A9DZ61 A4 ~~,8
Error in line 34: G4F2 A390 82,2
Error in line 49: S616 S616 32,4
Error in line 50: ymgfgOCEW A4 47,6
Error in line 59: ymgfgOCEW S329 22,3
Error in line 16: A9DZ61 S616 34,1
Error in line 57: EO0IW1jVAt S329 73,3
Error in line 71: S616 A4 0,6
Error in line 76: EO0IW1jVAt S616 90,61
Error in line 83: S616 A4 64,4
Error in line 64: G4F2 S329 68,6
Error in line 69: A9DZ61 A4 67,6
Error in line 84: S616 S616 87,9
Error in line 88: S616 S329 35,7
Error in line 85: G4F2 S616 50,8
Error in line 87: A9DZ61 S329 33,7
Error in line 79: EO0IW1jVAt S616 284,7
Error in line 93: G4F2 A390 32,7
Error in line 96: A9DZ61 A390 26,8
Error in line 105: EO0IW1jVAt S616 34,9
Error in line 117: E0HS7N S329 17,p
Error in line 109: EO0IW1jVAt A4 46,8
Error in line 110: G4F2 S616 27,0
Error in line 119: EO0IW1jVAt S329 63,9
Error in line 139: ymgfgOCEW S329 3,1
Error in line 133: G4F2 A4 10,3
Error in line 142: G4F2 S329 58,1
Error in line 137: A9DZ61 S616 7,8
Error in line 143: G4F2 A390 58,0
Error in line 144: A9DZ61 A4 69,1
Error in line 116: S616 A390 130,5
Error in line 148: A9DZ61 A390 90,4
Error in line 152: A9DZ61 A4 29,1
Error in line 149: EO0IW1jVAt S329 66,2
Error in line 154: A9DZ61 A390 94,6
Error in line 161: A9DZ61 A4 47,3
Error in line 164: E0HS7N S329 149,1
Error in line 168: EO0IW1jVAt S329 47,7
Error in line 176: EO0IW1jVAt S616 2,6
Error in line 184: G4F2 A4 17,0
Error in line 175: VLatQ S329 61,3
Error in line 204: S616 A390 234,2
Error in line 210: VLatQ S616 34,8
Error in line 232: A9DZ61 S616 14,7
Error in line 231: E0HS7N S329 49,2
Error in line 237: S616 S616 24,4
Error in line 238: S616 A4 53,5
Error in line 243: A9DZ61 A4 131,1
